--- a/index.html
+++ b/index.html
@@ -1,47 +1,13 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agabaruhanga Malcolm - Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-<header class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="assets/IMAGE.jpeg" alt="Agabaruhanga Malcolm" class="profile-img me-2">
-            <span>Agabaruhanga Malcolm</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</header>
-
-<section class="hero text-center py-5">
-    <div class="container">
-        <h1 class="display-5 fw-bold">Agabaruhanga Malcolm</h1>
-        <p class="lead">Student at Uganda Christian University</p>
-        <div class="ratio ratio-16x9 mt-4">
-            <iframe src="https://www.youtube.com/embed/eow125xV5-c" title="Portfolio Video" allowfullscreen></iframe>
-        </div>
-    </div>
-</section>
-
-<footer class="text-center py-3 bg-light mt-5">
-    <p>&copy; 2025 Agabaruhanga Malcolm | All Rights Reserved</p>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>malcolm-app</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
